package app.carport.Controllers;

import app.carport.Persistence.ConnectionPool;
import io.javalin.Javalin;

public class AdminPanelController {
    public static void addRoutes(Javalin app, ConnectionPool connectionPool) {
    }
}
