package app.carport.Persistence;

import app.carport.Entities.Carport;
import app.carport.Entities.Order;

public class CarportMapper {
    public Carport getCarportByOrder(Order order, ConnectionPool connectionPool) {
        return null;
    }

    public Carport getCarportById(int id, ConnectionPool connectionPool) {
        return null;
    }

    public boolean insertCarport(Carport carport, ConnectionPool connectionPool) {
        return false;
    }

}
